<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IITM Campus Store</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_label">Log In!</string>
    <string name="sign_up_text"><u>New to Campus Store??\nSIGN UP!!</u></string>
    <string name="username_hint">Enter a username</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_new">New Note</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_edit_note">Add/Edit</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Content</string>
    <string name="save_button">Save</string>
    <string name="edit_error_title">Error!</string>
    <string name="edit_error_message">You cannot save a note without a title</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_invalid_message">Invalid username - only use your Roll Number.</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_userdetails">userdetails</string>
    <string name="title_activity_myitems">myitems</string>
    <string name="title_activity_latestitems">latestitems</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="search_title">Search</string>
    <string name="description_search">Search</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_categories">IITM Campus Store</string>

    <string name="category_prompt">Choose a country</string>

    <string-array name="category_arrays">
        <item>Choose a Category</item>
        <item>Electronic Gadgets</item>
        <item>Books and Stationery</item>
        <item>Cycles and automotive</item>
        <item>Musical Instruments</item>
        <item>Tickets, Gift vouchers, OPO invites</item>
        <item>Others</item>
    </string-array>
    <string-array name="tabheadings">
        <item>MY PROFILE</item>
        <item>MY ITEMS</item>
        <item>FAVORITES</item>
    </string-array>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_dashboard">Dashboard</string>

</resources>
