<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.adarsh.apps.campusstore.SignUpActivity">

<EditText
    android:id="@+id/usernameField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/username_hint"
    android:layout_above="@+id/passwordField"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <requestFocus />
</EditText>

<EditText
    android:id="@+id/passwordField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/password_hint"
    android:layout_above="@+id/hostel"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/hostel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your hostel"
        android:layout_above="@+id/phonenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="Enter your phone number"
        android:layout_above="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

<EditText
    android:id="@+id/emailField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:hint="@string/email_hint"
    android:layout_above="@+id/signupButton"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<Button
    android:id="@+id/signupButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up_button_label"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="173dp" />



</RelativeLayout>

